Add navigation to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/tteokbokki.html">Tteokbokki</a>
+    <ul><a href="recipes/tteokbokki.html">Tteokbokki</a></ul>
+    <ul><a href="recipes/overnight-oats.html">Overnight Oats</a></ul>
+    <ul><a href="recipes/tortilla-quiche.html">Tomato Tortilla Quiche</a></ul>
+
 </body>
 </html>
